--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -45,6 +45,7 @@
         <p>&copy; 2026 BookHub. All rights reserved.</p>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/cart.js"></script>
 </body>
