--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,7 @@
         <p>&copy; 2026 BookHub. All rights reserved. | Premium Online Book Store</p>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
