--- a/frontend/orders.html
+++ b/frontend/orders.html
@@ -37,6 +37,7 @@
         <p>&copy; 2026 BookHub. All rights reserved.</p>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/orders.js"></script>
 </body>
