--- a/frontend/register.html
+++ b/frontend/register.html
@@ -50,6 +50,7 @@
         <p>&copy; 2026 BookHub. All rights reserved.</p>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
 </body>
 </html>
